--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "mongoose": "^8.6.3",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7",
-    "otp-generator": "^4.0.1"
+    "otp-generator": "^4.0.1",
+    "pg": "^8.13.1",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.5",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "jest": "^29.7.0",
