--- a/.github/workflows/neo-sante-auth.yml
+++ b/.github/workflows/neo-sante-auth.yml
@@ -21,9 +21,9 @@ jobs:
             node-version: 20.17.0
 
       - name: Install dependencies
-        working-directory: ./server
+        working-directory: ./
         run: npm install
 
       - name: Run tests
-        working-directory: ./server
+        working-directory: ./
         run: npm test
